完成AQS笔记